--- a/index.html
+++ b/index.html
@@ -19,23 +19,49 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body>
+<body >
+  <!-- w-50 50% width -->
+  <div class="row mx-auto p-5 mt-5 g-0 ">
+    <div class="col-md-12 col-sm-12 col-lg-6">
+      <img src="images/image-product-desktop.jpg"class="img-fluid rounded "alt=""/>
 
-  Preview
+    </div>
+
+<div  class="col-md-12 col-sm-12 col-lg-6 pt-4 bg-white px-3">
+  <div class="text1">
+Perfume
+</div><br>
+<div class=" text-dark ">
 
   Gabrielle Essence Eau De Parfum
+</div><br>
+<div >
 
   A floral, solar and voluptuous interpretation composed by Olivier Polge, 
   Perfumer-Creator for the House of CHANEL.
+</div><br>
+<div class="justifytext">
+<span class="greentext">
+
 
   $149.99
+</span>
+  <span class="float-end"><s>
   $169.99
 
+</s></span>
+</div><br><br>
+<button class="btn d-block text-center col-lg-10 col-sm-8 p-">
+  <img src="images/icon-cart.svg" class="img"alt=""width="20"/>
+
   Add to Cart
+</button>
+</div>
+</div>
   
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
+    Coded by <a href="#">Adeboluwarin</a>.
   </div>
 </body>
 </html>
